--- a/src/HOME/Header/header.css
+++ b/src/HOME/Header/header.css
@@ -1,4 +1,4 @@
-.link-test::after{
+.link-test::after {
     content: "";
     position: absolute;
     height: 3px;
@@ -9,60 +9,74 @@
     transform: scaleX(0);
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.link-test:hover::after{
+
+.link-test:hover::after {
     transform: scaleX(1);
 }
-.link-test_2::after{
+
+.link-test_2::after {
     height: 3px;
     background-color: red;
     width: 50px;
     top: 45px;
-    left:10px;
+    left: 10px;
     position: absolute;
     content: "";
     transform: scaleX(0);
-    transition: all 0.4s  cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.link-test_2:hover::after{
+
+.link-test_2:hover::after {
     transform: scaleX(1);
 }
-.link-test_3::after{
+
+.link-test_3::after {
     height: 3px;
     background-color: red;
     width: 60px;
     top: 45px;
-    right:85px;
+    right: 85px;
     position: absolute;
     content: "";
     transform: scaleX(0);
-    transition: all 0.4s  cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.link-test_3:hover::after{
+
+.link-test_3:hover::after {
     transform: scaleX(1);
 }
-.dropdown-menu > div > li > button:hover{
-    background-color: rgb(34, 240, 237);
-    border-radius: 50px;
-    width: 120px;
+
+.dropdown-menu>div>button:hover {
+    color: white;
+    background-position: 0%;
 }
-.dropdown-menu > div > li >button {
+
+.dropdown-menu>div>button {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     padding: 7px;
-    margin-left:20%;
-} 
-.dropdown-menu{
+    width: 100%;
+    background-size: 200% 100%;
+    background-position: 100%;
+    background-image: linear-gradient(to right, #000 0%, #000 50%, #fff 50%, #fff 100%);
+}
+
+.dropdown-menu {
     animation: showLocate 0.4s ease-in-out;
 
 }
+
 @keyframes showLocate {
     from {
         opacity: 0;
         transform: translateY(-20px);
     }
+
     to {
-        transform: translateY(0px); 
+        transform: translateY(0px);
         opacity: 1;
-    }   
-}  
-.dropdown-menu > li > button:active{
-    background-color: rgb(90, 174, 174);
+    }
 }
