--- a/src/HOME/Header/header.css
+++ b/src/HOME/Header/header.css
@@ -64,9 +64,12 @@
     background-image: linear-gradient(to right, #000 0%, #000 50%, #fff 50%, #fff 100%);
 }
 
-.dropdown-menu {
-    animation: showLocate 0.4s ease-in-out;
-
+.dropdown:hover>.dropdown-menu {
+    animation: showLocate 0.4s ease-in-out both;
+    display: block;
+    -webkit-animation: showLocate 0.4s ease-in-out both;
+    -moz-animation: showLocate 0.4s ease-in-out both;
+    -o-animation: showLocate 0.4s ease-in-out both;
 }
 
 @keyframes showLocate {
