--- a/public/css/members.css
+++ b/public/css/members.css
@@ -236,9 +236,9 @@ body {
 }
 
 .animation {
-    position: absolute;
-    top: 195vh;
-    left: 34vw;
+    position: relative;
+    margin-top: 2.3%;
+    margin-right: 30%;
 
     body {
         background: rgba(218, 218, 218, 1)
@@ -418,9 +418,8 @@ body {
 }
 
 .animation2 {
-    position: absolute;
-    top: 195vh;
-    left: 50vw;
+    position: relative;
+    margin-top: 2.3%;
 
     body {
         background: rgba(218, 218, 218, 1)
@@ -599,9 +598,9 @@ body {
 }
 
 .animation3 {
-    position: absolute;
-    top: 195vh;
-    left: 66vw;
+    position: relative;
+    margin-top: 2.3%;
+    margin-left: 30%;
 
     body {
         background: rgba(218, 218, 218, 1)
