--- a/src/HOME/MainContent/main.css
+++ b/src/HOME/MainContent/main.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Signika:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-.nha_que {
-  font-family: "Signika", sans-serif;
+.main-title {
+  font-family: "Quicksand", sans-serif;
   font-weight: 900;
   font-size: 85px;
   width: 100%;
 }
 
-.nha_que>p {
-  filter: drop-shadow(12px 12px 5px rgb(134, 134, 134));
+.main-title>p {
+  filter: drop-shadow(12px 12px 5px rgb(255, 255, 255, 0.7));
   display: inline-block;
 }
 
