--- a/src/HOME/Card/member.css
+++ b/src/HOME/Card/member.css
@@ -43,12 +43,12 @@
     height: 100%;
     object-fit: cover;
     border-radius: 200px;
+    border: 3px solid white;
     transition: all 0.5s ease-in-out;
-    ;
 }
 
-
 .title:hover {
+    box-shadow: 0 0 15px 5px white;
     opacity: 1;
     backdrop-filter: blur(4px) brightness(75%);
 }
@@ -68,7 +68,7 @@
     text-shadow: 0 0 10px #fff;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    transition: all 0.5s linear;
+    transition: all 0.5s ease-in-out;
     z-index: 999;
     position: absolute;
 }
